--- a/labs/lab1/portfolio/contact.html
+++ b/labs/lab1/portfolio/contact.html
@@ -16,7 +16,7 @@ in html
         <title> Izabel Diaz-Infante: Personal Website</title>
         
         <link href="css/styles.css" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
     </head>
 <!-- closing head -->
 
