--- a/labs/lab1/portfolio/index.html
+++ b/labs/lab1/portfolio/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang ="en">
 <!--
 
 First Website
@@ -28,7 +28,7 @@ in html
               <h1> Izabel Diaz-Infante</h1>
       </header> 
       <nav>
-          <hr width="50%" />
+          <hr>
           <a href="index.html"> <em>Home</em></a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
