--- a/hw/hw1/history.html
+++ b/hw/hw1/history.html
@@ -47,7 +47,7 @@
             <div id ="history">
                 <img src ="img/timeline.png" alt ="WC3 Timeline"/>
                 <br>
-                <figcaption> Timeline of the WC3</figcaption>
+                Timeline of the WC3
             </div>
                  
 
