--- a/hw/hw1/standards.html
+++ b/hw/hw1/standards.html
@@ -37,13 +37,20 @@
             <h2>Current Standards</h2>
             
             <ol>
-                <br><li> <a href ="https://www.w3.org/standards/webdesign/"> Web Design and Applications</a></li>
-                <br><li> <a href="https://www.w3.org/standards/webofdevices/"> Web of Devices</a></li>
-                <br><li> <a href="https://www.w3.org/standards/webarch/">Web Architechture</a></li>
-                <br><li> <a href="https://www.w3.org/standards/semanticweb/">Semantic Web</a></li>
-                <br><li> <a href="https://www.w3.org/standards/xml/">XML Technology</a></li>
-                <br><li> <a href="https://www.w3.org/standards/webofservices/"> Web of Services</a></li>
-                <br><li> <a href="https://www.w3.org/standards/agents/"> Browsers and Authorizing Tools</a></li>
+                <br>
+                <li> <a href ="https://www.w3.org/standards/webdesign/"> Web Design and Applications</a></li>
+                <br>
+                <li> <a href="https://www.w3.org/standards/webofdevices/"> Web of Devices</a></li>
+                <br>
+                <li> <a href="https://www.w3.org/standards/webarch/">Web Architechture</a></li>
+                <br>
+                <li> <a href="https://www.w3.org/standards/semanticweb/">Semantic Web</a></li>
+                <br>
+                <li> <a href="https://www.w3.org/standards/xml/">XML Technology</a></li>
+                <br>
+                <li> <a href="https://www.w3.org/standards/webofservices/"> Web of Services</a></li>
+                <br>
+                <li> <a href="https://www.w3.org/standards/agents/"> Browsers and Authorizing Tools</a></li>
             </ol>
 
 
