--- a/hw/hw1/history.html
+++ b/hw/hw1/history.html
@@ -48,6 +48,8 @@
                 <img src ="img/timeline.png" alt ="WC3 Timeline"/>
                 <br>
                 Timeline of the WC3
+                <br>
+                <a href ="https://www.w3.org/Consortium/facts#history">Source </a>
             </div>
                  
 
