--- a/codenotes.html
+++ b/codenotes.html
@@ -23,3 +23,6 @@
 
  include '../../sqlConnection.php';
  $dbConn = getConnection("quotes");
+ 
+ <!-- head tag-->
+ <link rel="stylesheet" href="css/styles.css" type="text/css" />
